--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,10 +31,6 @@ body {
   font-weight: light;
 }
 
-nav {
-  font-family: "Bungee";
-}
-
 .tweet-text {
   background: transparent;
   font-size: 1rem;
